more cleanup, more records examples